Improves documentation
